--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Google.Protobuf" version="3.27.3" manuallyInstalled="true" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" />
+  <package id="NumSharp" version="0.30.0" manuallyInstalled="true" />
+  <package id="Sprache" version="2.3.1" manuallyInstalled="true" />
+  <package id="System.Private.Uri" version="4.3.2" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" />
 </packages>
