--- a/Assets/Editor/MyCompany.MyPackage.Editor.asmdef
+++ b/Assets/Editor/MyCompany.MyPackage.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Editor",
+    "name": "MyCompany.MyPackage.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
