--- a/Assets/Tests/MyCompany.MyPackage.Editor.Tests.asmdef
+++ b/Assets/Tests/MyCompany.MyPackage.Editor.Tests.asmdef
@@ -14,6 +14,7 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "nunit.framework.dll",
+        "NumSharp.dll",
         "Sprache.dll"
     ],
     "autoReferenced": false,
