--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -3,6 +3,7 @@
   <package id="Google.Protobuf" version="3.27.3" manuallyInstalled="true" />
   <package id="Microsoft.NETCore.Targets" version="1.1.3" />
   <package id="NumSharp" version="0.30.0" manuallyInstalled="true" />
+  <package id="NumpyDotNet" version="0.9.86.2" manuallyInstalled="true" />
   <package id="Sprache" version="2.3.1" manuallyInstalled="true" />
   <package id="System.Private.Uri" version="4.3.2" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" />
