--- a/Assets/Editor/UnityNeRF.Editor.asmdef
+++ b/Assets/Editor/UnityNeRF.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "MyCompany.MyPackage.Editor",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:51b1a44553e2afa48916aa120a513f93"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
