--- a/Packages/xyz.example.nerf/Editor/MyCompany.UnityNeRF.Editor.asmdef
+++ b/Packages/xyz.example.nerf/Editor/MyCompany.UnityNeRF.Editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:51b1a44553e2afa48916aa120a513f93"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
